# metabase

./: '  .babelrc  .bowerrc  .buildpacks  .bun-version  .claude-env-files.edn  .claude-env-state.edn  .clj-surgeon.edn  .cljfmt.edn  .coderabbit.yaml  .codespellignore  .codespellrc  .dependency-cruiser.cjs  .dependency-cruiser.mjs  .dependency-cruiser.stories.mjs  .dir-locals.el  .dockerignore  .editorconfig  .env  .env.example  .eslint.config.bounaries.mjs  .eslint.config.boundaries.mjs  .eslintcache  .eslintignore  .eslintrc  .eslintrc.js  .evals_branch  .evals_branch.readme  .evals_ref  .flowconfig  .gcloudignore  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .jshintrc  .lein-classpath  .linkspector.yml  .lycheeignore  (+371 more)
ai-benchmark/: .config.toml  .gitattributes  .gitignore  README.md  pyproject.toml
ai-benchmark/docker/: Dockerfile  entrypoint.sh  supervisord.conf
ai-benchmark/scripts/: build-base-image.sh  clean-schema-for-llm.py  copy-to-metabase.sh  edit_sql_fixing_test_case.py  export-dump-schema-only.sh  export-dump.sh  load-dump.sh  start-metabase.sh  start-postgres-only.sh  validate_sql_fixing_test_cases.py
ai-benchmark/src/: __init__.py  __main__.py  cli.py
ai-benchmark/src/benchmarks/: __init__.py  config.py  constants.py  context.py  helpers.py  metric_presets.py
ai-benchmark/src/config/: __init__.py  toml_config.py
ai-benchmark/src/core/: __init__.py  base.py  db_upload.py  executor.py  results.py  test_case.py
ai-benchmark/src/llm/: __init__.py  client.py  models.py  streaming.py
ai-benchmark/src/metabase/: __init__.py  (+2 more)
(+65836 files in other folders)
